# gene-structure-removal

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  tune_prompt.md
env/: build_overlay.md
run/: build_dataset.sbatch  eval_embeddings.sbatch  srun_interactive.md  train.sbatch  train_pooling_sweep.sbatch  warm_cache.sbatch
scripts/: build_dataset.py  eval_embeddings.py  train.py  tune_launch.sh  tune_launch_gpunode_frozen.sh  tune_launch_lora.sh  tune_log_result.py  tune_queue_pop.py  tune_slot_bootstrap.sh  tune_slot_runner.sh
src/gsr/: __init__.py  args.py  paths.py
src/gsr/backbone/: __init__.py  esm.py  lora.py  pooling.py
src/gsr/cache/: __init__.py  embedding_cache.py  score_cache.py  wt_mean_cache.py
src/gsr/data/: __init__.py  dataset.py  dms.py  labeling.py  mutagenesis.py  sampler.py  seq_dataset.py  stream_dataset.py  training_data.py  uniref.py
src/gsr/eval/: __init__.py  centroid.py  composite.py  dimreduction.py  dms_cache.py  llr_figure.py  llr_projection.py  regression.py
src/gsr/losses/: __init__.py  base.py  contrastive_ce.py  ntxent.py  registry.py  triplet.py  wt_anchored_bce.py
src/gsr/models/: __init__.py  projection_head.py
src/gsr/scoring/: __init__.py  scorer.py  store.py
src/gsr/train/: __init__.py  trainer.py
src/gsr/utils/: __init__.py  device.py  hashing.py  seeding.py  spearman.py  stats.py  wandb_logger.py
tests/: test_args.py  test_cache.py  test_head.py  test_labeling.py  test_losses.py  test_mutagenesis.py  test_pooling.py  test_sampler.py  test_store.py  test_stream.py  test_wt_mean_cache.py
